# facturepro-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml.disabled
src/facturepro_mcp/: license_handler.py  lite_engine.py  server.py
